# AOC

./: create_a_day.sh
2019/: CMakeLists.txt
2019/src/common/: common.h  file_reader.cpp
2019/src/day_1/: day_1.cpp  total_fuel.cpp  total_fuel.h
2019/src/day_10/: asteroids_base.cpp  asteroids_base.h  day_10.cpp
2019/src/day_11/: day_11.cpp  painting_robots.cpp  painting_robots.h
2019/src/day_12/: day_12.cpp  jupiter.cpp  jupiter.h
2019/src/day_13/: day_13.cpp  game.cpp  game.h
2019/src/day_14/: day_14.cpp  stoichiometry.cpp  stoichiometry.h
2019/src/day_15/: day_15.cpp  oxygen.cpp  oxygen.h
2019/src/day_16/: day_16.cpp  fft.cpp  fft.h
2019/src/day_17/: day_17.cpp  scaffold.cpp  scaffold.h
2019/src/day_18/: day_18.cpp  vault.cpp  vault.h
2019/src/day_19/: beam.cpp  beam.h  day_19.cpp
2019/src/day_2/: computer.cpp  computer.h  day_2.cpp
2019/src/day_20/: day_20.cpp  donut_maze.cpp  donut_maze.h
2019/src/day_21/: day_21.cpp  springdroid.cpp  springdroid.h
2019/src/day_22/: cards.cpp  cards.h  day_22.cpp  slamshuffle.cpp  slamshuffle.h
2019/src/day_23/: category_six.cpp  category_six.h  day_23.cpp
2019/src/day_24/: day_24.cpp  planetofdiscord.cpp  planetofdiscord.h
2019/src/day_25/: cryostasis.cpp  cryostasis.h  day_25.cpp
2019/src/day_3/: day_3.cpp  wires.cpp  wires.h  wires_distance.cpp  wires_distance.h
2019/src/day_4/: day_4.cpp  get_password.cpp  get_password.h
2019/src/day_5/: day_5.cpp
2019/src/day_6/: day_6.cpp  orbits.cpp  orbits.h
2019/src/day_7/: day_7.cpp
2019/src/day_8/: day_8.cpp  image_layers.cpp  image_layers.h
2019/src/day_9/: day_9.cpp
2020/: CMakeLists.txt
2020/input/day_18/: test_2.txt
2020/src/day_1/: day_1.cpp  expense_report.cpp  expense_report.h
2020/src/day_10/: adapter_array.cpp  adapter_array.h  day_10.cpp
2020/src/day_11/: day_11.cpp  seating_system.cpp  seating_system.h
2020/src/day_12/: day_12.cpp  rain_risk.cpp  rain_risk.h
2020/src/day_13/: chinese_remains.cpp  chinese_remains.h  day_13.cpp  shuttle_search.cpp  shuttle_search.h
2020/src/day_14/: day_14.cpp  docking_data.cpp  docking_data.h
2020/src/day_15/: day_15.cpp  rambunctious_recitation.cpp  rambunctious_recitation.h
2020/src/day_16/: day_16.cpp  ticket_translation.cpp  ticket_translation.h
2020/src/day_17/: conway_cubes.cpp  conway_cubes.h  day_17.cpp
2020/src/day_18/: day_18.cpp  operation_order.cpp  operation_order.h
2020/src/day_2/: day_2.cpp  password_philosophy.cpp  password_philosophy.h
2020/src/day_3/: day_3.cpp  toboggan_trajectory.cpp  toboggan_trajectory.h
2020/src/day_4/: day_4.cpp  passport_processing.cpp  passport_processing.h
2020/src/day_5/: binary_boarding.cpp  binary_boarding.h  day_5.cpp
2020/src/day_6/: custom_customs.cpp  custom_customs.h  day_6.cpp
2020/src/day_7/: day_7.cpp  handy_haversacks.cpp  handy_haversacks.h
2020/src/day_8/: computer.cpp  computer.h  day_8.cpp  handheld_halting.cpp  handheld_halting.h
2020/src/day_9/: day_9.cpp  encoding_error.cpp  encoding_error.h
2021/: CMakeLists.txt
2021/input/day_23/: test_3.txt  test_4.txt  test_6.txt
2021/src/common/: common.h  log.cpp  log.h  print_results.h
2021/src/day_1/: SonarSweep.cpp  SonarSweep.h  day1.cpp
2021/src/day_10/: SyntaxScoring.cpp  SyntaxScoring.h  day_10.cpp
2021/src/day_11/: DumboOctopus.cpp  DumboOctopus.h  day_11.cpp
2021/src/day_12/: PassagePathing.cpp  PassagePathing.h  day_12.cpp
2021/src/day_13/: TransparentOrigami.cpp  TransparentOrigami.h  day_13.cpp
2021/src/day_14/: ExtendedPolymerization.cpp  ExtendedPolymerization.h  day_14.cpp
2021/src/day_15/: Chiton.cpp  Chiton.h  day_15.cpp
2021/src/day_16/: Decoder.cpp  Decoder.h  PacketDecoder.cpp  PacketDecoder.h  day_16.cpp
2021/src/day_17/: TrickShot.cpp  TrickShot.h  day_17.cpp
2021/src/day_18/: Snailfish.cpp  Snailfish.h  day_18.cpp
2021/src/day_19/: BeaconScanner.cpp  BeaconScanner.h  day_19.cpp
2021/src/day_2/: Dive.cpp  Dive.h  day_2.cpp
2021/src/day_20/: TrenchMap.cpp  TrenchMap.h  day_20.cpp
2021/src/day_21/: DiracDice.cpp  DiracDice.h  day_21.cpp
2021/src/day_22/: ReactorReboot.cpp  ReactorReboot.h  day_22.cpp
2021/src/day_23/: Amphipod.cpp  Amphipod.h  day_23.cpp
2021/src/day_24/: Untitled 2.ods
2021/src/day_25/: day_25.cpp  sea_cucumber.cpp  sea_cucumber.h
2021/src/day_3/: BinaryDiagnostic.cpp  BinaryDiagnostic.h  day_3.cpp
2021/src/day_4/: GiantSquid.cpp  GiantSquid.h  day_4.cpp
2021/src/day_5/: HydrothermalVenture.cpp  HydrothermalVenture.h  day_5.cpp
2021/src/day_6/: Lanternfish.cpp  Lanternfish.h  day_6.cpp
2021/src/day_7/: TreacheryOfWhales.cpp  TreacheryOfWhales.h  day_7.cpp
2021/src/day_8/: SevenSegmentSearch.cpp  SevenSegmentSearch.h  day_8.cpp
2021/src/day_9/: SmokeBasin.cpp  SmokeBasin.h  day_9.cpp
2021/src/tests/: SplitLineUTest.h  main.cpp
2022/: CMakeLists.txt
2022/src/common/: common.h  file_reader.cpp  log.cpp  log.h  print_results.h
2022/src/day_01/: a.out  calorie_counting.cpp  calorie_counting.h  day_01.cpp
2022/src/day_02/: day_02.cpp  rock_paper_scissors.cpp  rock_paper_scissors.h
2022/src/day_03/: day_03.cpp  rucksack_reorganization.cpp  rucksack_reorganization.h
2022/src/day_04/: camp_cleanup.cpp  camp_cleanup.h  day_04.cpp
2022/src/day_05/: day_05.cpp  supply_stacks.cpp  supply_stacks.h
2022/src/day_06/: day_06.cpp  tuning_trouble.cpp  tuning_trouble.h
2022/src/day_07/: day_07.cpp  no_space_left_on_device.cpp  no_space_left_on_device.h
2022/src/day_08/: day_08.cpp  treetop_tree_house.cpp  treetop_tree_house.h
2022/src/day_09/: day_09.cpp  rope_bridge.cpp  rope_bridge.h
2022/src/day_10/: cathode_ray_tube.cpp  cathode_ray_tube.h  day_10.cpp
2022/src/day_11/: day_11.cpp  monkey_middle.cpp  monkey_middle.h
2024/: CMakeLists.txt
2024/src/common/: common.h  file_reader.cpp  print_results.h
2024/src/day_01/: day_01.cpp  historian_hysteria.cpp  historian_hysteria.h
2024/src/day_02/: day_02.cpp  red_nosed_reports.cpp  red_nosed_reports.h
2024/src/day_03/: day_03.cpp  mull_it_over.cpp  mull_it_over.h
2024/src/day_04/: ceres_search.cpp  ceres_search.h  (+1 more)
(+93 files in other folders)
